--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,13 +15,13 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group" appDropdown>
+    <div class="btn-group">
       <button
         class="btn btn-primary dropdown-toggle"
         type="button"
         id="dropdownMenuButton"
       >
-        Manage Recipe
+        Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
         <li class="dropdown-item">
